@@ -24,6 +24,7 @@ munin (CVS)
     an rrdtool bug (Deb#296528).
   * Plugins: All plugins using logtail now properly detect its format
     (Deb#297628).
+  * Plugins: sunos/memory repaired (SF#1143610).
   * Docs: Added man page for munin-node-configure-snmp.
   * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
   * Installation: Create CIGdir if nonexistant.
